index.html modified

--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-hii
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Employee Management</title>
+    <link rel="stylesheet" href="../employee management/style.css" />
+  </head>
+  <body>
+    <h1>Employee Management Dashboard</h1>
+
+    <div class="center-buttons">
+      <a href="../employee management/add.html"
+        ><button>Add Employee</button></a
+      >
+      <a href="../employee management/view.html"
+        ><button>View Employees</button></a
+      >
+    </div>
+  </body>
+</html>
