--- a/update.html
+++ b/update.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Update Employee</title>
-    <link rel="stylesheet" href="../employee management/style.css" />
+    <link rel="stylesheet" href="../EMS/style.css" />
   </head>
   <body>
     <h1>Update Employee</h1>
