view.html modified

--- a/view.html
+++ b/view.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>View Employees</title>
-    <link rel="stylesheet" href="../employee management/style.css" />
+    <link rel="stylesheet" href="../EMS/style.css" />
   </head>
   <body>
     <h1>Employee List</h1>
